--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@ body {
 .container1 {
     background-color: #1f2937;
     display: flex;
-    padding: 24px 15%;
+    padding: 1.5% 15%;
     margin: 0;
-    gap: 70px;
+    gap: 5%;
     justify-content: space-between;
 }
 
@@ -37,7 +37,7 @@ button {
 }
 
 .button1 {
-    margin-top: 1%;
+    margin-top: 5%;
 }
 
 .text {
@@ -47,8 +47,8 @@ button {
     align-items: flex-start;
 }
 
-.placeholder {
-    width: 800px;
+.computer {
+    width: 650px;
     height: 300px;
 }
 
@@ -96,7 +96,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 10%;
     padding-top: 25px;
     padding-bottom: 5%;
     padding-left: 20%;
@@ -112,7 +112,7 @@ h2 {
 }
 
 img {
-    width: 200px;
+    width: 175px;
     height: 175px;
 }
 
