Changed the quote
- changed quote content
- fixed sign off placement

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ img {
     font-size: 18px;
     font-weight: bold;
     padding-right: 25%;
-    margin-top: -80px;
+    margin-top: -4%;
     padding-bottom: 5%;
 }
 
